infrastructure/apps/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  hostnames:
  - qjelly.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jellyfin
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
